// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar when user logged in renders self isAuthenticated true props 1`] = `
<div
  className="container-fluid"
>
  <nav
    className="navbar navbar-expand-md navbar-dark fixed-top bg-dark"
  >
    <div
      className="navbar-brand ttile"
    >
      <h1
        className="title"
      >
        everQuestionnaires
      </h1>
    </div>
    <div
      className="nav-item"
    >
      <NavLink
        activeClassName="active"
        className="nav-link"
        to="/questionnaires"
      >
        Questionnaires
      </NavLink>
    </div>
    <div
      className="nav-item"
    >
      <NavLink
        activeClassName="active"
        className="nav-link"
        to="/questionnaires/new"
      >
        Create Questionnaire
      </NavLink>
    </div>
    <div
      className="nav-item"
    >
      <NavLink
        activeClassName="active"
        className="nav-link"
        to="/admin"
      >
        Admin Page
      </NavLink>
    </div>
    <div
      className="nav-item"
    >
      <button
        className="nav-link logout-button btn btn-link"
        onClick={[Function]}
      >
        Logout
      </button>
    </div>
  </nav>
</div>
`;

exports[`NavBar when user logged in renders self with logout button 1`] = `
<button
  className="nav-link logout-button btn btn-link"
  onClick={[Function]}
>
  Logout
</button>
`;

exports[`NavBar when user logged out renders self with login link 1`] = `
<div
  className="container-fluid"
>
  <nav
    className="navbar navbar-expand-md navbar-dark fixed-top bg-dark"
  >
    <div
      className="navbar-brand ttile"
    >
      <h1
        className="title"
      >
        everQuestionnaires
      </h1>
    </div>
    <div
      className="nav-item"
    >
      <NavLink
        activeClassName="active"
        className="nav-link"
        to="/questionnaires"
      >
        Questionnaires
      </NavLink>
    </div>
    <div
      className="nav-item"
    >
      <NavLink
        activeClassName="active"
        className="nav-link"
        to="/questionnaires/new"
      >
        Create Questionnaire
      </NavLink>
    </div>
    <div
      className="nav-item"
    >
      <NavLink
        activeClassName="active"
        className="nav-link"
        to="/admin"
      >
        Admin Page
      </NavLink>
    </div>
    <div
      className="nav-item"
    >
      <NavLink
        activeClassName="active"
        className="nav-link"
        to="/login"
      >
        Login
      </NavLink>
    </div>
  </nav>
</div>
`;
